# Ram-simulator

./: .gitignore  CMakeLists.txt  README.md
include/: Clock.h  FIFO.h  Frame.h  LRU.h  MemoryManager.h  Optimal.h  PageTable.h  ReplacementAlgorithm.h
src/: Clock.cpp  FIFO.cpp  Frame.cpp  LRU.cpp  MemoryManager.cpp  Optimal.cpp  PageTable.cpp  ReplacementAlgorithm.cpp  main.cpp
